# wgpu_point_cloud_renderer

./: Cargo.toml
src/: framework.rs  main.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
