[package]
name = "wgpu"
version = "0.1.0"
authors = ["camille viot <camille.viot@altran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.22.1" }
wgpu = "0.6.0"
wgpu-subscriber = "0.1.0"
futures = { version = "0.3", default-features = false, features = ["std"] }