[package]
name = "wgpu"
version = "0.1.0"
authors = ["camille viot <camille.viot@altran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.22.1" }
wgpu = "0.6.0"
wgpu-subscriber = "0.1.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
bytemuck = { version = "1.4.1", features = ["derive"] }
log = "0.4"
rand = "0.7.3"
cgmath = "0.17.0"
# cgmath = "0.17"